--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,20 @@
       <label>User Name</label>
       <input type="text" name="userName" placeholder="userName" />
       <label>Message</label>
-      <input type="text" name="message" placeholder="userName" />
+      <textarea
+        type="text"
+        name="message"
+        placeholder="message"
+        rows="5"
+        cols="85"
+      >
+      </textarea>
       <button type="submit">Submit</button>
     </form>
+    <div id="showMessage"></div>
+    <div>
+      <button>Delete</button>
+      <button>Update</button>
+    </div>
   </body>
 </html>
